[tool.poetry]
name = "enigma"
version = "0.1.0"
description = "Python-based Enigma Machine Implementation"
authors = ["vlek <derekmccammond@protonmail.com>"]
license = "GPLv2"
keywords = [
    "enigma", "encryption", "decryption", "historical"
]
packages = [
    { include = "enigma" },
    { include = "enigma/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
